--- a/index.html
+++ b/index.html
@@ -176,30 +176,31 @@
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">SASS/SCSS</div>
+              <div class="skills__skill">CSS (SCSS)</div>
+              <div class="skills__skill">Styled Components</div>
               <div class="skills__skill">Tailwind</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">TypeScript</div>
               <div class="skills__skill">React</div>
+              <div class="skills__skill">React Native</div>
               <div class="skills__skill">Redux (RTK)</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">GitHub</div>
-              <div class="skills__skill">Webpack</div>
-              <div class="skills__skill">PostgreSQL</div>
+              <div class="skills__skill">Mobx</div>
+              <div class="skills__skill">RTK Query</div>
+              <div class="skills__skill">Tanstack (React) Query</div>
+              <div class="skills__skill">Next.js (SSR)</div>
+              <div class="skills__skill">GIT (GitHub)</div>
+              <div class="skills__skill">Vite</div>
+              <div class="skills__skill">Jest (unit test)</div>
+              <div class="skills__skill">React Testing Library</div>
               <div class="skills__skill">Node.js</div>
               <div class="skills__skill">Nest</div>
-              <div class="skills__skill">Express</div>
               <div class="skills__skill">Socket.io</div>
-              <div class="skills__skill">Pug</div>
+              <div class="skills__skill">PostgreSQL</div>
               <div class="skills__skill">Swagger</div>
-              <div class="skills__skill">Jest (unit test)</div>
-              <div class="skills__skill">Nx (build system)</div>
-              <div class="skills__skill">VBA</div>
               <div class="skills__skill">Figma</div>
               <div class="skills__skill">VSCode</div>
               <div class="skills__skill">English (B1)</div>
-              <div class="skills__skill">PhD (к.т.н.)</div>
+              <div class="skills__skill">PhD</div>
             </div>
           </div>
         </div>
@@ -217,6 +218,62 @@
         </h2>
 
         <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/project-shop-t1.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h4 class="projects__row-content-title">Online Store</h4>
+              <p class="projects__row-content-desc">
+                The online store was created using the website template from
+                Figma. An adaptive layout was made for three pages (main,
+                catalog and product details). It's made for desktop, tablet and
+                mobile.
+              </p>
+              <p class="projects__row-content-desc">
+                The project was built according to Feature-Sliced Design.
+              </p>
+              <div class="project-details__tools-used">
+                <h5 class="project-details__content-title">Tools Used</h5>
+                <div class="skills">
+                  <div class="skills__skill">HTML</div>
+                  <div class="skills__skill">CSS Modules</div>
+                  <div class="skills__skill">TypeScript</div>
+                  <div class="skills__skill">React</div>
+                  <div class="skills__skill">Redux (RTK)</div>
+                  <div class="skills__skill">RTK Query</div>
+                  <div class="skills__skill">React Router</div>
+                  <div class="skills__skill">React Hook Form</div>
+                  <div class="skills__skill">React Toastfy</div>
+                  <div class="skills__skill">Jest</div>
+                  <div class="skills__skill">React Testing Library</div>
+                  <div class="skills__skill">Eslint</div>
+                  <div class="skills__skill">Prettier</div>
+                  <div class="skills__skill">Vite</div>
+                </div>
+              </div>
+              <div class="project-details__links">
+                <a
+                  href="https://t1-internship.vercel.app/"
+                  class="btn btn--med btn--theme dynamicBgClr"
+                  style="margin-right: 25px"
+                  target="_blank"
+                  >Live Link</a
+                >
+                <a
+                  href="https://github.com/MihaMixFromGB/t1-internship/tree/task4"
+                  class="btn btn--med btn--theme-inv project-details__links-btn"
+                  target="_blank"
+                  >Repository</a
+                >
+              </div>
+            </div>
+          </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -309,31 +366,6 @@
               </p>
               <a
                 href="./project-1.html"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-shop.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Clothing Shop</h3>
-              <p class="projects__row-content-desc">
-                The online clothing store is created using the website template
-                from Figma. An adaptive layout for four pages is made. There are
-                main, catalog of man's clothing, cart, registration page. It's
-                made for desktop, tablet and mobile.
-              </p>
-              <a
-                href="./project-2.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
