--- a/index-ru.html
+++ b/index-ru.html
@@ -262,8 +262,7 @@
               <div class="project-details__links">
                 <a
                   href="https://t1-internship.vercel.app/"
-                  class="btn btn--med btn--theme dynamicBgClr"
-                  style="margin-right: 25px"
+                  class="btn btn--med btn--theme project-details__links-btn"
                   target="_blank"
                   >Сайт</a
                 >
@@ -295,14 +294,15 @@
                 (это ограничение бесплатного хостинга, где размещена серверная часть, на обработку первого запроса после простоя). 
                 Скоро будет полное описание... :)
               </p>
-              <a
+              <div class="project-details__links">
+                <a
                 href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
-                class="btn btn--med btn--theme dynamicBgClr"
+                class="btn btn--med btn--theme project-details__links-btn"
                 style="margin-bottom: 25px"
                 target="_blank"
                 >Сайт</a
               >
-              <div class="project-details__links">
+              <div>
                 <a
                   href="https://github.com/MihaMixFromGB/wheel-of-fortune-app"
                   class="btn btn--med btn--theme-inv project-details__links-btn"
@@ -315,6 +315,7 @@
                   target="_blank"
                   >Backend</a
                 >
+              </div>
               </div>
             </div>
           </div>
