--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
               <div class="project-details__links">
                 <a
                   href="https://t1-internship.vercel.app/"
-                  class="btn btn--med btn--theme dynamicBgClr"
-                  style="margin-right: 25px"
+                  class="btn btn--med btn--theme project-details__links-btn"
                   target="_blank"
                   >Live Link</a
                 >
@@ -309,26 +308,28 @@
                 free server hosting's limitation for first request after an
                 inactivity period). A description is cooming soon... :)
               </p>
-              <a
-                href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
-                class="btn btn--med btn--theme dynamicBgClr"
-                style="margin-bottom: 25px"
-                target="_blank"
-                >Live Link</a
-              >
               <div class="project-details__links">
                 <a
-                  href="https://github.com/MihaMixFromGB/wheel-of-fortune-app"
-                  class="btn btn--med btn--theme-inv project-details__links-btn"
+                  href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
+                  class="btn btn--med btn--theme project-details__links-btn"
+                  style="margin-bottom: 25px"
                   target="_blank"
-                  >Frontend</a
+                  >Live Link</a
                 >
-                <a
-                  href="https://github.com/MihaMixFromGB/wheel-of-fortune-server"
-                  class="btn btn--med btn--theme-inv project-details__links-btn"
-                  target="_blank"
-                  >Backend</a
-                >
+                <div>
+                  <a
+                    href="https://github.com/MihaMixFromGB/wheel-of-fortune-app"
+                    class="btn btn--med btn--theme-inv project-details__links-btn"
+                    target="_blank"
+                    >Frontend</a
+                  >
+                  <a
+                    href="https://github.com/MihaMixFromGB/wheel-of-fortune-server"
+                    class="btn btn--med btn--theme-inv project-details__links-btn"
+                    target="_blank"
+                    >Backend</a
+                  >
+                </div>
               </div>
             </div>
           </div>
